# mal-cli

./: .SRCINFO  .gitignore  Cargo.toml  Makefile  PKGBUILD  README.md  config.example.yml  todo.txt  todolist.txt
.github/workflows/: rust.yml
debian/: control
rmal/src/: lib.rs
src/: app.rs  cli.rs  lib.rs  logging.rs  main.rs  network.rs
src/api/: anime.rs  animelist.rs  manga.rs  mangalist.rs  mod.rs
src/api/model/: anime.rs  manga.rs  mod.rs  user.rs
src/auth/: cache.rs  mod.rs  redirect.rs  token.rs
src/config/: app_config.rs  mod.rs  oauth_config.rs
src/event/: events.rs  key.rs
src/handlers/: anime.rs  common.rs  display_block.rs  help.rs  input.rs  manga.rs  mod.rs  option.rs  ranking.rs  result.rs  seasonal.rs  top_three.rs  user.rs
src/handlers/display_block/: anime_details.rs  manga_details.rs  mod.rs  ranking.rs  result.rs  seasonal.rs  top_three.rs  user_anime_list.rs  user_manga_list.rs
src/ui/: help.rs  mod.rs  side_menu.rs  top_three.rs  util.rs
src/ui/display_block/: anime_details.rs  details_utils.rs  empty.rs  error.rs  loading.rs  manga_details.rs  mod.rs  ranking.rs  results.rs  search.rs  seasonal.rs  suggestion.rs  user.rs  user_anime_list.rs  user_manga_list.rs
