[package]
name = "mal-tui"
authors = ["Anas Saeed <saeedanas396@gmail.com>"] 
version = "0.1.0"
description = "Terminal User Interface for myanimelist.net"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mal"
path = "src/lib.rs"

[[bin]]
name = "mal"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
better-panic = "0.3.0"
chrono = "0.4.40"
color-eyre = "0.6.3"
crossterm = "0.28.1"
dirs = "6.0.0"
httparse = "1.10.1"
rand = "0.9.0"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest =  { version = "0.12.12", features = ["json", "rustls-tls","blocking"] }
rmal = { path = "./rmal", version = "0.1.0" }
serde = { version = "1.0.218" , features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
structopt = "0.3.26"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
time = { version = "0.3.39" , features = ["parsing" , "formatting"] }
tokio = {version = "1.44.0",features = ["full"]}
unicode-width = "0.2.0"
url = "2.5.4"
webbrowser = "1.0.3"


[workspace]
members=[
  "rmal"
]
