[package]
name = "mal-tui"
authors = ["Anas Saeed <saeedanas396@gmail.com>"] 
version = "0.1.0"
description = "Terminal User Interface for myanimelist.net"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mal"
path = "src/lib.rs"

[[bin]]
name = "mal"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
better-panic = "0.3.0"
bytes = "1.10.1"
chrono = "0.4.40"
color-eyre = "0.6.3"
crossterm = "0.28.1"
directories = "6.0.0"
dirs = "6.0.0"
figlet-rs = "0.1.5"
httparse = "1.10.1"
image = "0.25.5"
lazy_static = "1.5.0"
log = "0.4.27"
rand = "0.9.0"
ratatui = "0.29.0"
ratatui-image = "5.0.0"
regex = "1.11.1"
reqwest =  { version = "0.12.12", features = ["json", "rustls-tls","blocking"] }
serde = { version = "1.0.218" , features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
structopt = "0.3.26"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
time = { version = "0.3.39" , features = ["parsing" , "formatting"] }
tokio = {version = "1.44.0",features = ["full"]}
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-big-text = "0.7.1"
tui-logger = { version = "0.17.3", features = ["tracing-support"] }
tui-scrollview = "0.5.1"
unicode-width = "0.2.0"
url = "2.5.4"
webbrowser = "1.0.3"

