[package]
name = "mal-cli-rs"
authors = ["L4z3x <moussaousselmal1970@gmail.com>","Anas Saeed <saeedanas396@gmail.com>"] 
version = "0.2.1"
edition = "2021"
description = "CLI tool for  myanimelist"
repository = "https://github.com/L4z3x/mal-cli"
license = "MIT"
keywords = ["myanimelist", "cli", "anime","tui","terminal"]
categories = ["command-line-utilities","api-bindings","command-line-interface"]

[[bin]]
name = "mal"
path = "src/main.rs"
test = false
bench = false

[lib]
name = "mal"
path = "src/lib.rs"

[dependencies]
better-panic = "0.3.0"
bytes = "1.10.1"
chrono = "0.4.40"
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
dirs = "6.0.0"
figlet-rs = "0.1.5"
httparse = "1.10.1"
image = "0.25.5"
log = { version = "0.4.27", features = ["serde"] }
rand = "0.9.0"
ratatui = { version = "0.29.0", features = ["serde"] }
ratatui-image = "5.0.0"
regex = "1.11.1"
reqwest =  { version = "0.12.12", features = ["json", "rustls-tls","blocking"],default-features = false }
serde = "1.0.219"
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
strum = "0.27.1"
strum_macros = "0.27.1"
time = { version = "0.3.39" , features = ["parsing" , "formatting"] }
tokio = {version = "1.44.0",features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-big-text = "0.7.1"
tui-logger = { version = "0.17.3", features = ["tracing-support"] }
tui-scrollview = "0.5.1"
unicode-width = "0.2.0"
url = "2.5.4"
webbrowser = "1.0.3"

